@@ -70,8 +70,7 @@ CellFuncObj::~CellFuncObj() throw()
 const vector<double>& CellFuncObj::getVars() const
 {
     // Does absolutely nothing....
-    vector<double> fake;
-    return fake;
+    return mFakeVars;
 }
 
 void CellFuncObj::setVars(const vector<double>& vars)
