@@ -1,3 +1,9 @@
+2007-11-12  Kohei Yoshida  <kyoshida@novell.com>
+
+	* source/inc/numeric/cellfuncobj.hxx:
+	* source/numeric/cellfuncobj.cxx: made the fake variable vector a data
+	member to avoid returning a reference to a local variable.
+
 2007-11-08  Kohei Yoshida  <kyoshida@novell.com>
 
 	* source/inc/tool/global.hxx:
